# auto-project

./: .dockerignore  .railwayignore  Dockerfile  POST_MERGE_SCAN.md  README.md  abilities-shop.js  abilities.js  api-client.js  artifacts-shop.js  artifacts.js  auth-manager.js  combat-shop-v2.js  combat-shop.js  combat.js  debug-tools.js  docker-compose.yml  economy.js  equipment-reward.js  eslint.config.js  game-mode-selection.js  hero-selection.js  hero-stats-card.js  heroes.js  index.html  isolated-combat.js  item-shop.js  jsconfig.json  main.css  main.js  matchmaking-manager.js  minion-combat.js  package-lock.json  package.json  player-counter.js  player-health.js  playwright.config.js  railway.json  rounds-manager.js  shop-selection.js  stats-calculator.js  (+4 more)
backend/: .env  .env.example  auto_gladiators.db  pyproject.toml
backend/app/: __init__.py  auth.py  combat_engine.py  database.py  economy.py  heroes.py  main.py  models.py  realtime_tournament.py  redis_client.py  schemas.py  shop_items.py  tournament_manager.py  websocket_manager.py
backend/app/routers/: __init__.py  auth.py  matches.py  players.py  shop.py  tournaments.py  websocket.py
backend/database/: schema.sql
backend/scripts/: setup_db.py
coverage/: coverage-final.json  index.html
data/: heroes.js
docs/: ARCHITECTURE.md  CONTRIBUTING.md  EFFECT_SYSTEM_GUIDE.md  SECURITY.md  index.html  main.js  player-counter.js
multiplayer/: multiplayer-1v1.js  multiplayer-client.js  multiplayer-lobby.js  multiplayer-tournament.js
server/: .env  .env.example  Dockerfile  logger.js  package-lock.json  (+3 more)
(+696 files in other folders)
